Meeting notes and my 2 user stories. But  i must change the date of the meeting on it
